--- a/package.json
+++ b/package.json
@@ -4,18 +4,81 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@eslint/js": "^9.8.0",
+    "@next/eslint-plugin-next": "^16.0.1",
+    "@nx/devkit": "22.1.3",
+    "@nx/eslint": "22.1.3",
+    "@nx/eslint-plugin": "22.1.3",
+    "@nx/jest": "22.1.3",
     "@nx/js": "22.1.3",
+    "@nx/next": "^22.1.3",
+    "@nx/playwright": "22.1.3",
+    "@nx/react": "22.1.3",
+    "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/react": "16.3.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^30.0.0",
+    "@types/node": "20.19.9",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/uuid": "^11.0.0",
+    "autoprefixer": "10.4.13",
+    "babel-jest": "^30.0.2",
+    "eslint": "^9.8.0",
+    "eslint-config-next": "^16.0.1",
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
+    "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
+    "jest-util": "^30.0.2",
     "nx": "22.1.3",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^4.0.0",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
+  "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.2",
+    "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.25",
+    "graphql-request": "^7.3.5",
+    "lucide-react": "^0.555.0",
+    "mercadopago": "^2.11.0",
+    "next": "~16.0.1",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.68.0",
+    "sharp": "^0.34.5",
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
+  }
 }
