Iniciando proyecto para deploy vercel

--- a/libs/marketing/feature-home/tsconfig.lib.json
+++ b/libs/marketing/feature-home/tsconfig.lib.json
@@ -1,10 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "outDir": "../../../dist/out-tsc",
     "types": ["node", "react", "react-dom"],
     "declaration": true,
     "declarationMap": true,
+    "sourceMap": true,
     "inlineSources": true,
     "jsx": "react-jsx"
   },
