--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,24 +1,42 @@
 {
   "compilerOptions": {
-    "composite": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "importHelpers": true,
+    "rootDir": ".",
+    "baseUrl": ".",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "bundler",
+    "module": "esnext",
+    "emitDeclarationOnly": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "lib": ["es2022"],
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
+    "lib": ["es2022", "dom"],
     "skipLibCheck": true,
-    "strict": true,
     "target": "es2022",
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["node", "jest"],
     "customConditions": ["@mobile-store/source"],
     "paths": {
-      "@mobile-store/ui-kit": ["libs/shared/ui-kit/src/index.ts"]
+      "@mobile-store/shared/util-assets": ["libs/shared/util-assets/src/index.ts"],
+      "@mobile-store/shared/ui-kit": ["libs/shared/ui-kit/src/index.ts"],
+      "@mobile-store/shared/util-security": ["libs/shared/util-security/src/index.ts"],
+      "@mobile-store/shared/util-supabase": ["libs/shared/util-supabase/src/index.ts"],
+      "@mobile-store/marketing/feature-home": ["libs/marketing/feature-home/src/index.ts"]
     }
-  }
+  },
+  "exclude": ["node_modules", "tmp"]
 }
