--- a/libs/marketing/feature-home/project.json
+++ b/libs/marketing/feature-home/project.json
@@ -1,9 +1,9 @@
 {
-  "name": "ui-kit",
+  "name": "feature-home",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/ui-kit/src",
+  "sourceRoot": "libs/marketing/feature-home/src",
   "projectType": "library",
-  "tags": ["type:ui", "scope:shared"],
+  "tags": ["type:feature", "scope:marketing"],
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
@@ -12,7 +12,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/ui-kit/jest.config.ts"
+        "jestConfig": "libs/marketing/feature-home/jest.config.ts"
       }
     }
   }
