--- a/libs/marketing/feature-home/tsconfig.spec.json
+++ b/libs/marketing/feature-home/tsconfig.spec.json
@@ -1,8 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "outDir": "../../../dist/out-tsc",
     "module": "commonjs",
+    "moduleResolution": "node",
+    "customConditions": [],
     "types": ["jest", "node", "react", "react-dom"],
     "jsx": "react-jsx"
   },
