--- a/libs/shared/util-assets/tsconfig.json
+++ b/libs/shared/util-assets/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "strict": true,
-    "jsx": "react-jsx"
+    "strict": true
   },
   "files": [],
   "include": [],
@@ -13,7 +12,7 @@
       "path": "./tsconfig.lib.json"
     },
     {
-      "path": "./tsconfig.spec.json"
+      "path": "./tsconfig.spec.json" // Lo crearemos abajo
     }
   ]
 }
