--- a/libs/shared/util-security/tsconfig.json
+++ b/libs/shared/util-security/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "strict": true,
-    "jsx": "react-jsx"
+    "strict": true
   },
   "files": [],
   "include": [],
