--- a/libs/shared/util-supabase/tsconfig.spec.json
+++ b/libs/shared/util-supabase/tsconfig.spec.json
@@ -1,16 +1,16 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "outDir": "../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node", "react", "react-dom"],
-    "jsx": "react-jsx"
+    "moduleResolution": "bundler",
+    "types": ["jest", "node"]
   },
   "include": [
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx"
+    "src/**/*.d.ts"
   ]
 }
