Iniciando proyecto para deploy vercel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,5 @@
   "extends": "./tsconfig.base.json",
   "compileOnSave": false,
   "files": [],
-  "references": [
-    {
-      "path": "./apps/store-frontend-e2e"
-    },
-    {
-      "path": "./apps/store-frontend"
-    }
-  ]
+  "references": []
 }
