--- a/libs/shared/util-content/package.json
+++ b/libs/shared/util-content/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "@mobile-store/shared-util-supabase",
+  "name": "@mobile-store/shared-util-content",
   "version": "0.0.1",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "private": true,
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/ssr": "^0.0.10",
+    "zod": "^3.22.0",
     "tslib": "^2.3.0"
   }
 }
