--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "//--- COMANDOS CRÍTICOS VERCEL (PROD) ---//": "",
     "vercel-build": "pnpm run build:web",
     "build:web": "npx nx build store-frontend --prod",
-    "//--- DESPLIEGUE ---//" : "",
+    "//--- DESPLIEGUE ---//": "",
     "deploy:prod": "git add . && git commit -m \"chore(release): Deploy production build\" && git push origin main",
     "//--- SIMULACIÓN DE PRODUCCIÓN LOCAL ---//": "",
     "build:all": "nx run-many --target=build --all --configuration=production",
@@ -81,8 +81,14 @@
   "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.86.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.6.0",
