fix: update tsconfig settings for deployment

--- a/libs/shared/ui-kit/tsconfig.json
+++ b/libs/shared/ui-kit/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",       // ANTES: nodenext
+    "moduleResolution": "bundler", // ANTES: nodenext
     "strict": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "files": [],
   "include": [],
