--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,7 +37,8 @@
       "@mobile-store/shared-util-supabase": ["libs/shared/util-supabase/src/index.ts"],
       "@mobile-store/marketing-feature-home": ["libs/marketing/feature-home/src/index.ts"],
       "@mobile-store/shared-util-content": ["libs/shared/util-content/src/index.ts"],
-      "@mobile-store/marketing-ui-landing": ["libs/marketing/ui-landing/src/index.ts"]
+      "@mobile-store/marketing-ui-landing": ["libs/marketing/ui-landing/src/index.ts"],
+"@mobile-store/shared-util-seo": ["libs/shared/util-seo/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
