--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "defaultBase": "master",
+  "defaultBase": "main",
   "namedInputs": {
     "default": ["{projectRoot}/**/*", "sharedGlobals"],
     "production": [
@@ -9,60 +9,22 @@
       "!{projectRoot}/tsconfig.spec.json",
       "!{projectRoot}/jest.config.[jt]s",
       "!{projectRoot}/.eslintrc.json",
-      "!{projectRoot}/eslint.config.mjs",
-      "!{projectRoot}/.next/**/*",
-      "!{projectRoot}/dist/**/*"
+      "!{projectRoot}/eslint.config.mjs"
     ],
-    "sharedGlobals": [
-      "{workspaceRoot}/.github/workflows/ci.yml",
-      "{workspaceRoot}/package.json",
-      "{workspaceRoot}/nx.json",
-      "{workspaceRoot}/tsconfig.base.json",
-      "{workspaceRoot}/eslint.config.mjs",
-      { "env": "NEXT_PUBLIC_SUPABASE_URL" },
-      { "env": "NEXT_PUBLIC_SUPABASE_ANON_KEY" }
-    ]
+    "sharedGlobals": []
   },
-  "nxCloudId": "6932dc1fef01ab88a68da712",
   "targetDefaults": {
     "build": {
+      "dependsOn": ["^build"],
       "inputs": ["production", "^production"],
-      "cache": true,
-      "dependsOn": ["^build"]
+      "cache": true
     },
     "lint": {
-      "inputs": [
-        "default",
-        "{workspaceRoot}/.eslintrc.json",
-        "{workspaceRoot}/eslint.config.mjs",
-        "{workspaceRoot}/eslint.base.config.mjs"
-      ],
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
       "cache": true
-    },
-    "test": {
-      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
-      "cache": true
-    },
-    "e2e": { "inputs": ["default", "^production"], "cache": true },
-    "@nx/js:tsc": {
-      "cache": true,
-      "dependsOn": ["^build"],
-      "inputs": ["production", "^production"]
     }
   },
   "plugins": [
-    {
-      "plugin": "@nx/js/typescript",
-      "options": {
-        "typecheck": { "targetName": "typecheck" },
-        "build": {
-          "targetName": "build",
-          "configName": "tsconfig.lib.json",
-          "buildDepsName": "build-deps",
-          "watchDepsName": "watch-deps"
-        }
-      }
-    },
     {
       "plugin": "@nx/next/plugin",
       "options": {
@@ -71,19 +33,15 @@
         "devTargetName": "dev",
         "serveStaticTargetName": "serve-static"
       }
-    },
-    { "plugin": "@nx/eslint/plugin", "options": { "targetName": "lint" } },
-    { "plugin": "@nx/jest/plugin", "options": { "targetName": "test" } },
-    { "plugin": "@nx/playwright/plugin", "options": { "targetName": "e2e" } }
+    }
   ],
   "generators": {
-    "@nx/next": { "application": { "style": "tailwind", "linter": "eslint" } },
     "@nx/react": {
-      "library": {
-        "unitTestRunner": "jest",
-        "style": "tailwind",
-        "linter": "eslint"
-      }
+      "application": { "babel": true },
+      "library": { "unitTestRunner": "jest" }
+    },
+    "@nx/next": {
+      "application": { "style": "tailwind", "linter": "eslint" }
     }
   }
 }
