--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -39,7 +39,8 @@
       "@mobile-store/shared-util-content": ["libs/shared/util-content/src/index.ts"],
       "@mobile-store/marketing-ui-landing": ["libs/marketing/ui-landing/src/index.ts"],
       "@mobile-store/shared-util-seo": ["libs/shared/util-seo/src/index.ts"],
-      "@mobile-store/shared-util-routing": ["libs/shared/util-routing/src/index.ts"]
+      "@mobile-store/shared-util-routing": ["libs/shared/util-routing/src/index.ts"],
+       "@mobile-store/shared-util-search": ["libs/shared/util-search/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
